# graphql-api

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/entities/: file.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20240728_105913_create_user_table.rs  m20240728_155049_create_file_table.rs
src/: main.rs
src/config/: database.rs  schema.rs  settings.rs
src/files/graphql/: mutations.rs  queries.rs
src/files/graphql/types/: inputs.rs  outputs.rs
src/services/: ipfs.rs
