[package]
name = "veecerts-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }

actix-web = "4.8.0"
async-graphql = "7.0.7"
async-graphql-actix-web = "7.0.7"
dotenv = "0.15.0"
futures = "0.3.30"
pinata-sdk = "1.1.0"
reqwest = { version = "0.12.5", features = ["multipart", "json"] }
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
  "with-json",
  "with-chrono",
] }
serde = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
